- Extraplanar Travelers is now a full category of selectable critters. Fixes #4394.
- Changed Imbue Item spell from SG to properly require being an adept, mystic adept or having the Advanced Ritual Casting art.
- Off-Road Tires properly cost 400 Nuyen per tire and have an availability of 6.

Changed/New Strings:
- String_ContactPoints
- String_KnowledgePoints
- String_Skull
- String_Torso
- String_Arms
- String_Legs
- Message_CharacterCustomDataWarning
- MessageTitle_CharacterCustomDataWarning
- Menu_Main_Options
- Menu_Main_Character_Options
- Menu_Main_Update
- Menu_Main_Restart
- Menu_Main_ChummerWiki
- Menu_Main_ChummerDiscord
- Menu_Main_DumpshockThread
- Menu_Main_Translator
- Menu_Main_HeroLabImporter
- String_Save
- String_SaveAs
- Tip_SkillsKnowledgeSkills
- Title_Options
- Tab_Options_CustomData
- Tab_Options_CustomDataDirectories
- Tab_Options_Basic
- Label_Options_CustomDataDirectories
- Checkbox_Options_LiveUpdateCleanCharacterFiles
- Label_Options_DefaultCharacterOption
- Title_CharacterOptions
- String_Rename
- Label_CharacterOptions_CharacterCreationSettings
- Label_CharacterOptions_Printing
- Label_CharacterOptions_OptionsOfficialRules
- Label_CharacterOptions_Cyberlimbs
- Label_CharacterOptions_DecimalsAndRounding
- Label_CharacterOptions_CustomData
- Button_ChangeCustomDataEntries
- Label_CharacterOptions_Combat
- Label_CharacterOptions_MagicAndResonance
- Label_CharacterOptions_PriorityTable
- Label_CharacterOptions_AllowedCyberwareGrades
- Label_CharacterOptions_RedlinerLimbs
- Message_CharacterOptions_UnsavedDirty
- MessageTitle_CharacterOptions_UnsavedDirty
- Message_CharacterOptions_ConfirmDelete
- MessageTitle_CharacterOptions_ConfirmDelete
- Message_CharacterOptions_SettingRename
- Message_CharacterOptions_DuplicateSettingName
- MessageTitle_CharacterOptions_DuplicateSettingName
- Message_CharacterOptions_SelectSettingName
- Message_CharacterOptions_SelectSettingFileName
- Message_CharacterOptions_SettingFileNameTooLongError