@@ -258,5 +258,10 @@
       <name>Shadowrun Missions Season 8</name>
       <code>SRM8</code>
     </book>
+    <book>
+      <id>d7ac8252-fc5d-42d2-afca-2cf98ec14287</id>
+      <name>Grimmes Erwachen (German-exclusive)</name>
+      <code>GE</code>
+    </book>
   </books>
 </chummer>
